# smartnode

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  conanfile.txt  disabled.appveyor.yml
cmake/: CompilerWarnings.cmake
include/: FailPrinters.h  Listener.h  Listener.hpp  Session.h  Session.hpp
src/: CMakeLists.txt  Connection.h  ConsolePrinter.hpp  FailPrinters.cpp  IdTypes.cpp  IdTypes.hpp  Listener.cpp  Listener.hpp  Logger.cpp  Logger.hpp  MessageEngine.cpp  MessageEngine.h  MessageEngine.hpp  MessageTypes.h  PeerIdTypes.cpp  PeerIdTypes.hpp  Session.cpp  Session.hpp  main.cpp  session.cpp  session.hpp
src/data_model/: CMakeLists.txt
src/data_model/include/: data_types.hpp
src/messaging/: CMakeLists.txt  id_types.cpp  message_builder.cpp  parser.cpp
src/messaging/include/: id_types.hpp  message_builder.hpp  messages.hpp  parser.hpp
src/server/: CMakeLists.txt  connection.hpp  console_printer.hpp  id_types.cpp  listener.cpp  listener.hpp  logger.cpp  logger.hpp  main.cpp  message_engine.cpp  message_engine.hpp  session.cpp  session.hpp
src/ui/: CMakeLists.txt  main.cpp  session.hpp
